--- a/src/components/smartphone-keyboard.css
+++ b/src/components/smartphone-keyboard.css
@@ -25,6 +25,7 @@
   justify-content: center;
   color: #424242;
   user-select: none;
+  text-transform: lowercase;
 }
 
 .SmartphoneKeyboard__key--secondary {
