--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
-  display: flex;
+  display: grid;
   height: 100vh;
   width: 100vw;
-  align-items: center;
-  justify-content: center;
+  grid-template: 1fr / 1fr auto 1fr;
+  place-items: center center;
   --color-rojo: #c54940;
   --color-azul: #005bf1;
   --color-purpura: #a506e9;
@@ -16,18 +16,25 @@
   background-size: 400% 400%;
   animation: move-background 25s ease-in-out infinite;
   font-family: 'Neue';
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .App__message {
-  flex: 1;
   justify-content: center;
   display: flex;
-  text-align: center;
   color: rgba(255, 255, 255, 0.8);
 }
 
 .App__message--right {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  line-height: 1.25;
+  color: white; /* esto es para que no se nos olvide cambiar este texto */
+  text-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+  transform: rotate(25deg);
+  font-weight: 500;
+  max-width: 33vw;
 }
 
 @keyframes move-background {
